fix(button): Fix button text color in dark mode
Use color contrast function to determine background color
as the color-white mixin is inverted in dark mode

--- a/src/components/base/button/button.scss
+++ b/src/components/base/button/button.scss
@@ -145,6 +145,7 @@
 
   &.btn-confirm,
   &.btn-info {
+    color: color-yiq($blue-500);
     @include gl-bg-blue-500;
     @include gl-inset-border-1-blue-600;
 
@@ -201,6 +202,7 @@
   }
 
   &.btn-success {
+    color: color-yiq($green-500);
     @include gl-bg-green-500;
     @include gl-inset-border-1-green-600;
 
@@ -309,6 +311,7 @@
   }
 
   &.btn-danger {
+    color: color-yiq($red-500);
     @include gl-bg-red-500;
     @include gl-inset-border-1-red-600;
 
